Updated frontend scripts.js and index.html

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -125,7 +125,7 @@ function sendMessage() {
   appendMessage("You", message);
   input.value = "";
 
-  fetch("http://localhost:5000/chat", {
+  fetch("https://chat-yvmf.onrender.com", {
     method: "POST",
     headers: { "Content-Type": "application/json" },
     body: JSON.stringify({ message })
