Updated index.html and scripts.js

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -125,7 +125,7 @@ function sendMessage() {
   appendMessage("You", message);
   input.value = "";
 
-  fetch("https://chat-yvmf.onrender.com", {
+  fetch("https://chat-6en7.onrender.com", {
     method: "POST",
     headers: { "Content-Type": "application/json" },
     body: JSON.stringify({ message })
