Update frontend to use Render backend API

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -51,7 +51,7 @@ document.addEventListener('DOMContentLoaded', () => {
     let isChatOpen = false;
     let isListening = false;
     let recognition;
-    const API_URL = "http://127.0.0.1:5000";
+    const API_URL = "https://chat-ewrn.onrender.com";
 
     chatToggle.addEventListener('click', () => {
         isChatOpen = !isChatOpen;
